--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     <h1>HAR explorer</h1>
 
     <input type="file" id="file-input"><br>
+    Exclude filter (URL's ending with): <input type="text" id="exclude-filter"> (comma-separated)<br>
 </header>
 
 <div class="container-fluid">
