--- a/index.html
+++ b/index.html
@@ -139,10 +139,11 @@
 </head>
 <body>
 <header>
-    <h1>HAR explorer</h1>
-
-    <input type="file" id="file-input"><br>
-    Exclude filter (URL's ending with): <input type="text" id="exclude-filter"> (comma-separated)<br>
+    <div class="m-3">
+        <h1>HAR explorer</h1><input type="file" id="file-input"><br>
+        Exclude filter (URL's ending with): <input type="text" id="exclude-filter"> (comma-separated)<br>
+        Include filter (URL's ending with): <input type="text" id="include-filter"> (comma-separated)<br>
+    </div>
 </header>
 
 <div class="container-fluid">
